--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,15 +9,61 @@
 
   <title>Curso TailwindCSS</title>
 </head>
+
 <body class="bg-slate-200">
 
   <main class="w-full min-h-screen flex flex-col md:flex-row items-center justify-center mx-auto">
 
-    <section class="w-full flex-1 bg-red-400">ESQUERDA</section>
+    <section class="w-full flex-1 flex flex-col justify-center items-center p-4">
 
-    <section class="hidden md:flex w-full flex-1 bg-blue-400">DIREITA</section>
+      <div class="w-full max-w-xl flex flex-col justify-center items-center gap-4">
+        <img src="./assets/user.png" alt="Logo do user" class="w-36 hover:scale-110 duration-300">
+        <h1 class="text-4xl font-bold mb-7">Login</h1>
+
+        <input type="text" placeholder="Digite o seu email..."
+          class="w-full p-2 rounded-lg outline-none bg-gray-50 focus:bg-white">
+
+        <input type="password" placeholder="**********"
+          class="w-full p-2 rounded-lg outline-none bg-gray-50 focus:bg-white">
+
+        <div class="w-full flex items-center justify-between">
+          <div class="flex items-center gap-2">
+            <input type="checkbox">
+            <label for="">Lembrar senha</label>
+          </div>
+
+          <a href="#" class="text-sky-600 hover:text-sky-500 duration-200">Esqueceu a senha?</a>
+        </div>
+
+        <button class="w-full bg-blue-600 p-2 rounded-lg text-white text-lg font-medium hover:bg-blue-500">
+          Acessar
+        </button>
+
+        <p>
+          Não possui uma conta? 
+          <a href="#" class="font-medium text-sky-600 hover:text-sky-500 duration-200">Criar uma conta</a>
+        </p>
+
+      </div>
+
+    </section>
+
+    <section class="hidden md:flex flex-col gap-8 w-full flex-1 bg-blue-600 h-screen items-center justify-center p-4">
+
+      <h1 class="text-white text-2xl lg:text-4xl text-center max-w-lg">
+        Domine as <strong>tecnologias mais buscadas</strong> pelo mercado!
+      </h1>
+
+      <img 
+      src="assets/techs.png" 
+      alt="Tecnologias usadas no mercado"
+      class="w-3/4 lg:w-full lg:max-w-md"
+      >
+
+    </section>
 
   </main>
 
 </body>
+
 </html>
